--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -390,10 +390,20 @@ img {
 
 /*==================== SKILLS ====================*/
 .skills__container {
+  row-gap: 0;
+}
+
+.skills__header {
   display: flex;
   align-items: center;
   margin-bottom: var(--mb-2-5);
   cursor: pointer;
+}
+
+.skills__icon,
+.skills__arrow {
+  font-size: 2rem;
+  color: var(--first-color);
 }
 
 .skills__icon {
@@ -409,6 +419,11 @@ img {
   color: var(--text-color-light);
 }
 
+.skills__list {
+  row-gap: 1.5rem;
+  padding-left: 2.7rem;
+}
+
 .skills__arrow {
   margin-left: auto;
   transition: .4s;
@@ -420,8 +435,148 @@ img {
   margin-bottom: var(--mb-0-5);
 }
 
-/*==================== QUALIFICATION ====================*/
+.skills__name {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+}
 
+.skills__bar,
+.skills__percentage {
+  height: 5px;
+  border-radius: .25rem;
+}
+
+.skills__bar {
+  background-color: var(--first-color-lighter);
+}
+
+.skills__percentage {
+  display: block;
+  background-color: var(--first-color);
+}
+
+.skills__html {
+  width: 90%;
+}
+
+.skills__css {
+  width: 80%;
+}
+
+.skills__js {
+  width: 60%;
+}
+
+.skills__react {
+  width: 80%;
+}
+
+.skills__java {
+  width: 50%;
+}
+
+.skills__php {
+  width: 70%;
+}
+
+.skills__firebase {
+  width: 60%;
+}
+
+.skills__aws {
+  width: 40%;
+}
+
+.skills__photoshop {
+  width: 75%;
+}
+
+.skills__figma {
+  width: 60%;
+}
+
+.skills__illustrator {
+  width: 70%;
+}
+
+.skills__xd {
+  width: 90%;
+}
+
+.skills__close .skills__list {
+  height: 0;
+  overflow: hidden;
+}
+
+.skills__open .skills__list {
+  height: max-content;
+  margin-bottom: var(--mb-2-5);
+}
+
+.skills__open .skills__arrow {
+  transform: rotate(-180deg);
+}
+
+/*==================== QUALIFICATION ====================*/
+.qualification__tabs {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: var(--mb-2);
+}
+
+.qualification__button {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+  cursor: pointer;
+}
+
+.qualification__button:hover {
+  color: var(--first-color);
+}
+
+.qualification__icon {
+  font-size: 1.8rem;
+  margin-right: var(--mb-0-25);
+}
+
+.qualification__data {
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  column-gap: 1.5rem;
+}
+
+.qualification__title {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+
+}
+
+.qualification__subtitle {
+  display: inline-block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-1);
+}
+
+.qualification__calender {
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+}
+
+.qualification__rounder {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  background-color: var(--first-color);
+  border-radius: 50%;
+}
+
+.qualification__line {
+  display: block;
+  width: 1px;
+  height: 100%;
+  background-color: var(--first-color);
+  transform: translate(6px, -7px);
+}
 
 /*==================== SERVICES ====================*/
 
